[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawlsnap"
description = "Official Python SDK for the CrawlSnap threat-intelligence API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "CrawlSnap", email = "support@crawlsnap.com" }]
keywords = ["crawlsnap", "threat-intelligence", "ioc", "security", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2,<3",
  "typing-extensions>=4.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.2", "mypy>=1.5"]

[project.urls]
Homepage = "https://crawlsnap.com"
Documentation = "https://crawlsnap.com/docs"

[tool.hatch.version]
path = "crawlsnap/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["crawlsnap"]

[tool.mypy]
files = ["crawlsnap", "tests"]
check_untyped_defs = true
warn_unused_configs = true
